Created many to many relationships and they fill the tables, but leave null. Also I need to fix the curriculum with teachers and discipline get all method